# sicp-examples

./: .stylish-haskell.yaml  README.md  sicp-examples.cabal
examples/1.BuildingAbstractionsWithProcedures/1.ElementsOfProgramming/1.Expressions/: 137.yaml  486.yaml  arbitrary.yaml  number.yaml
test/: Spec.hs
