name:                sicp-examples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sicp-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:   src
    exposed-modules:  Lib
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010

test-suite sicp-examples-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs

    build-depends:    aeson
                    , base
                    , directory
                    , errors
                    , filepath
                    , tasty
                    , tasty-hunit
                    , yaml

                    -- , sicp-examples

    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    default-language: Haskell2010

source-repository head
    type:     git
    location: https://github.com/githubuser/sicp-examples
